# wakaru

./: Cargo.toml  README.md  pnpm-lock.yaml  vitest.config.js
crates/wakaru_cli/: Cargo.toml
crates/wakaru_cli/src/: args.rs  commands.rs  main.rs  output.rs  path.rs  perf.rs
crates/wakaru_unminify/: Cargo.toml
crates/wakaru_unminify/src/: lib.rs  pipeline.rs  test_utils.rs
crates/wakaru_unminify/src/transformations/: mod.rs  module_mapping.rs  oxfmt.rs  smart_inline.rs  smart_rename.rs  un_argument_spread.rs  un_assignment_merging.rs  un_boolean.rs  un_bracket_notation.rs  un_builtin_prototype.rs  un_conditionals.rs  un_curly_braces.rs  un_default_parameter.rs  un_enum.rs  un_esm.rs  un_esmodule_flag.rs  un_export_rename.rs  un_flip_comparisons.rs  un_iife.rs  un_import_rename.rs  un_indirect_call.rs  un_infinity.rs  un_jsx.rs  un_nullish_coalescing.rs  un_numeric_literal.rs  un_optional_chaining.rs  un_parameter_rest.rs  un_parameters.rs  un_return.rs  un_runtime_helper.rs  un_sequence_expression.rs  un_template_literal.rs  un_type_constructor.rs  un_typeof.rs  un_undefined.rs  un_use_strict.rs  un_variable_merging.rs  un_while_loop.rs
crates/wakaru_unminify/src/transformations/runtime_helpers/: mod.rs
crates/wakaru_unminify/src/transformations/runtime_helpers/babel/: _spread.rs  array_like_to_array.rs  array_without_holes.rs  create_for_of_iterator_helper.rs  extends.rs  interop_require_default.rs  interop_require_wildcard.rs  mod.rs  object_spread.rs  sliced_to_array.rs  (+1 more)
crates/wakaru_unminify/src/utils/: is_helper_function_call.rs  mod.rs
(+19 files in other folders)
