[workspace]
members = [
    "crates/wakaru_cli",
    "crates/wakaru_core",
    "crates/wakaru_unpacker",
    "crates/wakaru_unminify",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/pionxzh/wakaru"

[workspace.dependencies]
wakaru_core = { path = "crates/wakaru_core" }
wakaru_unpacker = { path = "crates/wakaru_unpacker" }
wakaru_unminify = { path = "crates/wakaru_unminify" }
