[package]
name = "wakaru_cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wakaru"
path = "src/main.rs"

[dependencies]
wakaru_core.workspace = true
wakaru_unpacker.workspace = true
wakaru_unminify.workspace = true
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
globwalk = "0.9.1"
