[package]
name = "wakaru_unminify"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxc_allocator = "0.128.0"
oxc_ast = "0.128.0"
oxc_ast_visit = "0.128.0"
oxc_codegen = "0.128.0"
oxc_parser = "0.128.0"
oxc_span = "0.128.0"
wakaru_core.workspace = true
